# garudust

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: auto-label.yml  ci.yml  release.yml
crates/garudust-agent/: Cargo.toml
crates/garudust-agent/src/: agent.rs  compressor.rs  lib.rs  prompt_builder.rs
crates/garudust-core/: Cargo.toml
crates/garudust-core/src/: budget.rs  config.rs  error.rs  lib.rs  memory.rs  net_guard.rs  tool.rs  transport.rs  types.rs
crates/garudust-cron/: Cargo.toml
crates/garudust-cron/src/: lib.rs  scheduler.rs
crates/garudust-gateway/: Cargo.toml
crates/garudust-gateway/src/: handler.rs  lib.rs  metrics.rs  router.rs  sessions.rs  state.rs
crates/garudust-memory/: Cargo.toml
crates/garudust-memory/src/: file_store.rs  lib.rs  migrations.rs  session_db.rs
crates/garudust-platforms/: Cargo.toml
crates/garudust-platforms/src/: discord.rs  lib.rs  line.rs  matrix.rs  slack.rs  telegram.rs  webhook.rs
crates/garudust-tools/: Cargo.toml
crates/garudust-tools/src/: lib.rs  registry.rs
crates/garudust-tools/src/toolsets/: delegate.rs  files.rs  memory.rs  mod.rs  pdf.rs  search.rs  skills.rs  terminal.rs  web.rs
crates/garudust-transport/: Cargo.toml
crates/garudust-transport/src/: anthropic.rs  chat_completions.rs  lib.rs  ollama.rs  registry.rs  retry.rs
docs/: index.html
docs/i18n/th/: README.md
docs/i18n/zh/: README.md
scripts/: make_cast.py  record_demo.py
utils/make-cast/src/: main.rs
