[package]
name         = "garudust-cron"
version      = { workspace = true }
edition      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
rust-version = { workspace = true }
description  = "Cron-scheduled autonomous task runner for Garudust AI agents"
keywords     = ["ai", "agent", "cron", "scheduler", "automation"]
categories   = ["development-tools", "asynchronous"]

[dependencies]
garudust-core  = { path = "../garudust-core",  version = "0.2.1" }
garudust-agent = { path = "../garudust-agent", version = "0.2.1" }
tokio-cron-scheduler = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
serde_yaml     = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
fs4            = { workspace = true }
chrono         = { workspace = true }
