[package]
name         = "garudust-tools"
version      = { workspace = true }
edition      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
rust-version = { workspace = true }
description  = "Built-in tool suite for Garudust agents: files, web, terminal, browser, MCP, skills"
keywords     = ["ai", "agent", "tools", "mcp", "llm"]
categories   = ["development-tools", "filesystem"]

[dependencies]
garudust-core   = { path = "../garudust-core",   version = "0.2" }
garudust-memory = { path = "../garudust-memory", version = "0.2" }
async-trait     = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
reqwest         = { workspace = true }
futures         = { workspace = true }
serde_yaml      = { workspace = true }
rmcp            = { workspace = true }
chromiumoxide   = { workspace = true }
jsonschema      = { workspace = true }
walkdir         = { workspace = true }
globset         = { workspace = true }
lopdf           = { workspace = true }
pdf-extract     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
