[package]
name         = "garudust-transport"
version      = { workspace = true }
edition      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
rust-version = { workspace = true }
description  = "Anthropic and OpenRouter transport with streaming and retry for Garudust agents"
keywords     = ["ai", "anthropic", "llm", "streaming", "agent"]
categories   = ["network-programming", "asynchronous"]

[dependencies]
garudust-core = { path = "../garudust-core", version = "0.2.1" }
async-trait   = { workspace = true }
reqwest       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
futures       = { workspace = true }
async-stream  = { workspace = true }
chrono        = { workspace = true }
